@@ -4,4 +4,4 @@ project.depends.scala.source=scala-src
 project.depends.lib=phetcommon : piccolo-phet : jfreechart-phet : scala-common : motion : record-and-playback
 
 project.flavor.forces-and-motion.mainclass=edu.colorado.phet.motionseries.sims.forcesandmotion.ForcesAndMotionApplication
-project.flavor.the-ramp.mainclass=edu.colorado.phet.motionseries.sims.theramp.RampApplication
+project.flavor.ramp-forces-and-motion.mainclass=edu.colorado.phet.motionseries.sims.rampforcesandmotion.RampApplication
