@@ -1,3 +1,5 @@
+Changed occurrences of "the-ramp" to "ramp-forces-and-motion"
+Changed total force color to a different shade of green, see #2452
 # 1.03.71 (42755) Jul 30, 2010
 Fixed a bug that caused a java.lang.NumberFormatException: For input string: "0,00" in languages that use comma instead of decimal point
 Fixed: "Press arrow" keys get slightly overlapped by gray round rects when the scoreboard grows.
